
2012-December-20 Chris Morley

	* src/DensityOfStates.h,src/MolecularComponents.cpp,src/MolecularComponents.h,
	src/plugin.h,src/plugins/BeyerSwinehart.cpp,src/plugins/ClassicalRotor.cpp,
	src/plugins/DefinedStatesRotor.cpp,src/plugins/HinderedRotorCM1D.cpp,
	src/plugins/HinderedRotorQM1D.cpp,src/plugins/Morse.cpp,src/plugins/QMRotor.cpp:
	Complete unification of DOS calculators
	
	* src/plugin.h: improve formatting of lists of plugins in error messages.

	* src/System.cpp: reinstate reading of me:numberOfGrains, but optimization
	of number of grains etc. remains to be done.

	There are trivial rounding errors in the i-propyl QA test.
 
2012-December-16 Struan Robertson

	* MolecularComponents.cpp/.h: Changes toward the removal of the division 
	of density of states calculators - all density of states calculator
	instances now located in the same vector.

2012-December-2 Struan Robertson

	* Miscellaneous changes following to fix Linux 64 bit compiler warnings
	and to update Linux 64 baselines.

2012-December-7 Chris Morley

	* src/CollisionOperator.cpp, src/CollisionOperator.h,src/System.cpp: XML
	output for "the average of the grain energy in each isomer" already output to
	ctest. 
	XML output is split a bit unhappily between CollisionOperator and
	System and if we keep adding additional outputs there may need to be a
	rationalisation.
	Enabled by <me:printGrainedSpeciesProfile/>. These tags need to be reviewed
	for consistency.
	The ctest code is not right - I will pass on to Dave.
	 
	* popDiag.xsl: graph of above.  

	* qd/include/qd/dd_real.h, qd/include/qd/qd_real.h: minor mods to reduce
	compilation warnings

2012-December-2 Struan Robertson

	* Main.cpp and Doc.: License updated to GPLv3.

	* SensitivityAnalysis.cpp: Template added.

2012-November-28 Chris Morley

	src/plugin.h: Add TopPlugin as parent of plugins. Provides:
	- case and whitespace insensitivity of plugin names in the input file;