@@ -118,7 +118,7 @@ namespace mesmer
       getBath();
 
     if (molType == "modelled" || molType == "deficientReactant" //|| molType == "sink"   CM g_dos to be added later if needed for reverse ILT
-      || molType == "transitionState" || molType == "excessReactant")
+      || molType == "transitionState" || molType == "excessReactant" || molType == "PriorCoFragment"  )
       getDOS();
 
     if (molType == "transitionState")
