@@ -1,4 +1,11 @@
 
+2012-December-29 Struan Robertson
+
+	* PriorDistribution.cpp: Initial check-in of prior distribution, and 
+	associated changes, on behalf of Robin Shannon.
+
+	* Updated ipropyl baseline.
+
 2012-December-20 Chris Morley
 
 	* src/DensityOfStates.h,src/MolecularComponents.cpp,src/MolecularComponents.h,
